Thu May 12 08:32:22 BST 2005 (njh)
----------------------------------
  * clamav-milter:	Open /dev/console (if LogFile not set) before
  				dropping priv so that error messages aren't
				lost reported by David Crow.

Wed May 11 18:02:24 CEST 2005 (tk)
----------------------------------
  * libclamav/others: increase f-level

Wed May 11 03:29:50 CEST 2005 (tk)
----------------------------------
  * freshclam/manager.c: fix socket descriptor leak in --no-dns mode (patch by
			 GertJan Spoelman <cav*gjs.cc>)

Wed May 11 02:44:41 CEST 2005 (tk)
----------------------------------
  * clamscan, freshclam: return with 62 (instead of 1) when logger can't be
			 initialized

Tue May 10 21:29:45 CEST 2005 (tk)
----------------------------------
  * libclamav/matcher-ac.c, libclamav/matcher-bm.c: fix detection problem with
						    *.ndb OLE2 signatures
						    (problem reported by Trog)

Tue May 10 04:47:28 CEST 2005 (tk)
----------------------------------
  * libclamav/matcher.c: fix signature offset calculation in large files
			 (problem reported by Christoph)

Mon May  9 18:06:53 BST 2005 (njh)
----------------------------------
  * clamav-milter:	Print segfault diagnostic, even if print_trace is
				not available

Sun May  8 16:42:46 CEST 2005 (tk)
----------------------------------
  * sigtool/sigtool.c: fix support for *.fp databases

Wed May  4 20:15:33 BST 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Remove old unused RFC1341 parts
  * clamav-milter:	Better handling of log file errors
			Always send 451 when loading a new database when
				--external is not set

Wed May  4 13:58:59 BST 2005 (njh)
----------------------------------
  * libclamav/tnef.c:	If a parse fails and debugging is on, the file being
				scanned is dumped to a temporary file

Tue May  3 02:09:08 CEST 2005 (tk)
----------------------------------
  * libclamav: activate PDF code (patch by NJH)

Sat Apr 30 02:50:11 CEST 2005 (tk)
----------------------------------