@@ -1,3 +1,7 @@
+Thu May 12 09:23:52 BST 2005 (trog)
+-----------------------------------
+  * libclamav/speical.c: Fix reading PString type in Photoshop thumbnails.
+
 Thu May 12 08:32:22 BST 2005 (njh)
 ----------------------------------
   * clamav-milter:	Open /dev/console (if LogFile not set) before
